[tool.poetry]
name = "detection-project"
version = "0.1.0"
description = ""
authors = ["MYEONGJIN LEE <46295610+myeongwang@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scipy = "^1.11.3"
requests = "^2.31.0"
matplotlib = "^3.8.0"
pytz = "^2023.3.post1"
rate = "^0.1.6"
limiter = "^0.3.1"
bybit = "^0.2.12"
websockets = "^12.0"
ratelimiter = "^1.2.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"